# leo-color007

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/css/: home.css
templates/: index.html
