[tool.poetry]
name = "colorextractor"
version = "0.1.0"
description = ""
authors = ["Leo-Mahendra <mahender.kurikyala11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
extcolors = "^1.0.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
